# amqp-bridge

./: .env.template  Cargo.toml  Containerfile  Dockerfile  README.md  compose.yml  docker-compose.yml
.github/workflows/: ci.yaml
src/: bridge.rs  conf.rs  health.rs  lib.rs  logging.rs  main.rs  transform.rs
