[package]
name = "amqp-bridge"
version = "0.1.2"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
axum = "0.8.7"
futures = "0.3.31"
lapin = "3.7.2"
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
tracing = "0.1.43"
tracing-subscriber = { version = "0.3.22", features = ["json", "env-filter", "fmt"] }
url = "2.5.7"

[profile.release]
codegen-units = 1
debug = false
lto = "fat"
opt-level = "z"
strip = true
