[package]
name = "amqp-bridge"
version = "0.2.15"
edition = "2024"
description = "AMQP bridge"
license = "AGPL-3.0-only"

[dependencies]
anyhow = "1.0.103"
async-trait = "0.1.89"
axum = "0.8.9"
futures = "0.3.32"
lapin = "4.10.0"
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["json", "env-filter", "fmt"] }
url = "2.5.8"

[lints.rust]
linker_messages = "allow"
unsafe_code = "forbid"

[profile.dev]
debug = true
incremental = true
opt-level = 0

[profile.release]
codegen-units = 1
debug = false
lto = "fat"
opt-level = 3
panic = "abort"
strip = true

[profile.release.package."*"]
codegen-units = 1
debug = false
opt-level = 3
strip = true
